<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable name="searchFragment"
                  type="com.example.conct_music.view.search.SearchFragment"/>

        <variable
                name="viewModel"
                type="com.example.conct_music.view.search.SearchViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frameLayout">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".03"/>


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".97"/>


        <com.arlib.floatingsearchview.FloatingSearchView
                android:id="@+id/sv_singer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:floatingSearch_close_search_on_keyboard_dismiss="true"
                app:floatingSearch_dimBackground="false"
                app:floatingSearch_dismissOnOutsideTouch="true"
                app:floatingSearch_leftActionMode="showSearch"
                app:floatingSearch_searchHint="@string/singers_hint_search"
                app:floatingSearch_showSearchKey="true"
                app:floatingSearch_suggestionsListAnimDuration="250"/>


        <TextView
                android:id="@+id/tv_singers_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/singers_title"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/sv_singer"/>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_music_tracks"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_singers_title"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isProgressShow.get() ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sv_singer"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{viewModel.isEmptyState.get() ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/rv_music_tracks"
                app:layout_constraintEnd_toEndOf="@+id/rv_music_tracks"
                app:layout_constraintTop_toTopOf="@+id/rv_music_tracks"
                app:layout_constraintBottom_toBottomOf="@+id/rv_music_tracks">


            <ImageView
                    android:id="@+id/iv_empty"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    app:srcCompat="@drawable/ic_notification_5123"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/tv_empty_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singers_title_empty"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_empty"/>

            <TextView
                    android:id="@+id/tv_empty_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singers_message_empty"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_empty_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>